--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,504 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*, *::before, *::after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    background-color: #131313;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.noise-wrapper{
+    background: #131313;
+    -webkit-backdrop-filter: opacity(10%);
+    backdrop-filter: opacity(5%);
+   
+    width: 100%;
+    height: auto;
+    padding: 50px 0 200px 0;
+    position: relative;
+    pointer-events: all;
+}
+
+.noise-wrapper::before{
+    content: "";
+    position: absolute;
+    background-image: url('assets/noise.gif');
+    background-repeat: repeat;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.04;
+    pointer-events: none;
+}
+
+.container{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.header{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__logo{
+    width: 70px;
+    height: 80px;
+}
+
+.header__topic{
+    color:white;
+    font-size: 30px;
+}
+
+.content-wrapper{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.card-container{
+    width: 100%;
+    height: auto;
+    display: flex;
+  
+    justify-content: space-between;
+    border-radius: 20px;
+ 
+    padding: 42px;
+    position: relative;
+    pointer-events: all;
+}
+
+.card-container::before{
+    content: "";
+    position: absolute;
+    background-color: #636363;
+    opacity: 0.07;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+    pointer-events: none;
+}
+
+.card__image{
+    width: 340px;
+    height: 490px;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.card__image.first{
+    height: 640px;
+}
+
+.card__image img{
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.card__image span{
+    font-size: 16px;
+    color: #b3b3b3;
+    width: 300px;
+    height: 140px;
+    line-height: 24px;
+}
+
+.card__info{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    width: 600px;
+    height: 500px;
+    justify-content: flex-start;
+}
+
+.card__info.first{
+    height: 100%;
+}
+
+
+.card__title{
+    font-size: 54px;
+    color: white;
+}
+
+.doubleText{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.card__info p, .doubleText p, .form-element label{
+    font-size: 18px;
+    line-height: 26px;
+}
+
+.doubleText span, .card__info span{
+    color: #b3b3b3;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.form-element{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 10px;
+}
+
+.form__input{
+    height: 50px;
+    border-radius: 17px;
+    outline: none;
+    border: none;
+    padding: 0 25px 0 30px;
+    font-size: 18px;
+}
+
+.form_button{
+    background: black;
+    border-radius: 17px;
+    font-size: 18px;
+    cursor: pointer;
+    border: none;
+    height: 50px;
+    color: white;
+    font-weight: 600;
+}
+
+.form.inline{
+    
+    width: 700px;
+}
+
+.form.inline .form-element{
+    flex-direction: row;
+    gap: 30px; 
+    align-items: center;
+    justify-content: space-between;
+}
+
+.form.inline .form__input{
+    width: 420px;
+}
+
+.form.inline .form_button{
+    width: 250px;
+}
+
+.showCollection{
+    width: 100%;
+    height: 70px;
+    border-radius: 16px;
+    background: linear-gradient(40deg , #FF6A3B 60%, #FBAF3D);
+    background-position: 100% 0 !important;
+    background-size: 200% 200%;
+    transition: all 0.5s ease-in-out !important;
+    cursor: pointer;
+}
+
+.showCollection a{
+    text-decoration: none;
+    color: white;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 22px;
+    line-height: 1.55;
+    font-weight: 400;
+    letter-spacing: 1.55px;
+}
+
+.showCollection:hover{
+    background-position: 0 0 !important;
+}
+
+.form-follow{
+    width: 60%;
+    height: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    gap: 30px;
+}
+
+.form-follow label{
+    font-size: 34px;
+}
+
+.form-follow .form-element{
+    flex-direction: row;
+    width: 100%;
+    gap: 30px;
+
+}
+
+.form-follow .form__input{
+    width: 60%;
+    height: 64px;
+}
+
+.form-follow .form_button{
+    width: calc(40% - 30px);
+    height: 64px;
+}
+
+.card__title.first{
+    display: none;
+}
+
+.adaptive-wrapper{
+    width: 100%;
+    height: auto;
+    display: flex;
+  
+    justify-content: space-between;
+}
+
+@media screen and (max-width: 1150px) {
+    .card-container{
+        flex-direction: column;
+        width: 740px;
+        margin: 0 auto;
+        align-items: center;
+    }
+
+    .card-container.first{
+        height: auto;
+    }
+
+    .form.inline{
+        max-width: 100%;
+    }
+
+    .card__image, .card__image.first{
+        width: calc(100% - 100px);
+        height: 420px;
+        justify-self: flex-start;
+    }
+
+    .card__image img{
+        height: calc(100% - 80px);
+    }
+    
+    .card__image span{
+        width: 100%;
+        text-align: center;
+    }
+
+    .header{
+        width: 740px;
+        margin: 0 auto;
+    }
+
+    .card__title{
+        display: none;
+    }
+    .card__title.first{
+        display: block;
+        padding-bottom: 30px;
+    }
+
+    .adaptive-wrapper{
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    .card__info{
+        height: auto;
+
+    }
+
+    
+}
+
+@media screen and (max-width: 760px) {
+    .card-container{
+        width: 500px;
+    }
+    .card__info{
+        width: 100%;
+    }
+
+    .card__title.first{
+        font-size: 32px;
+    }
+    .header{
+        width: 500px;
+    }
+
+    .header__topic{
+        font-size: 22px;
+    }
+
+    .header__logo{
+        width: 50px;
+        height: 60px;
+    }
+
+    .card__image{
+        height: 260px;
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .card__image.first{
+        width: 100%;
+        height: 340px;
+        margin-bottom: 20px;
+    }
+
+    .card__image img{
+        height: 100%;
+    }
+    
+
+    .card__image.first img{
+        height: calc(100% - 80px);
+    }
+
+    .card__image span{
+        text-align: left;
+        font-size: 14px;
+    }
+    
+    .card__info{
+        gap: 25px;
+    }
+
+    .card__info p, .doubleText p, .form-element label{
+        font-size: 16px;
+        line-height: 24px;
+    }
+    
+    .doubleText span, .card__info span{
+        color: #b3b3b3;
+        font-size: 12px;
+        line-height: 18px;
+    }
+
+    .form__input{
+        font-size: 16px;
+        padding: 0 20px 0 25px;
+    }
+
+
+    .form-follow label{
+        font-size: 28px;
+        text-align: left;
+        padding-left: 14px;
+    }
+
+    .form-follow .form-element, .form.inline .form-element{
+        flex-direction: column;
+    }
+
+    .form-follow .form__input, .form-follow .form_button{
+        width: 100%;
+        height: 56px;
+    }
+
+    .form.inline .form_button{
+        width: 100%;
+    }
+
+    .showCollection{
+        height: 60px;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .card-container{
+        width: 360px;
+    }
+
+    .card__title.first{
+        font-size: 28px;
+    }
+    .header{
+        width: 360px;
+    }
+
+    .header__topic{
+        font-size: 20px;
+    }
+
+    .card__image{
+        height: 200px;
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    .card__image.first{
+        width: 100%;
+        height: 300px;
+        margin-bottom: 20px;
+    }
+
+    .card__image.first img{
+        height: calc(100% - 100px);
+    }
+
+    .card__image span{
+        text-align: left;
+        font-size: 12px;
+    }
+    
+    .card__info{
+        gap: 15px;
+    }
+
+    .card__info p, .doubleText p, .form-element label{
+        font-size: 14px;
+        line-height: 22px;
+    }
+    
+    .doubleText span, .card__info span{
+        color: #b3b3b3;
+        font-size: 10px;
+        line-height: 16px;
+    }
+
+    .form__input{
+        font-size: 14px;
+        padding: 0 15px 0 20px;
+    }
+
+    .form-follow label{
+        font-size: 28px;
+        text-align: left;
+        padding-left: 14px;
+    }
+
+    .form_button{
+        font-size: 15px;
+    }
 }
