--- a/src/index.css
+++ b/src/index.css
@@ -288,6 +288,7 @@ body{
         width: 740px;
         margin: 0 auto;
         align-items: center;
+        padding: 36px;
     }
 
     .card-container.first{
@@ -343,6 +344,7 @@ body{
 @media screen and (max-width: 760px) {
     .card-container{
         width: 500px;
+        padding: 30px;
     }
     .card__info{
         width: 100%;
@@ -350,6 +352,8 @@ body{
 
     .card__title.first{
         font-size: 32px;
+        text-align: left;
+        width: 100%;
     }
     .header{
         width: 500px;
@@ -433,15 +437,17 @@ body{
     .showCollection{
         height: 60px;
     }
+
 }
 
 @media screen and (max-width: 520px) {
     .card-container{
-        width: 360px;
+        width: 340px;
+        
     }
 
     .card__title.first{
-        font-size: 28px;
+        font-size: 26px;
     }
     .header{
         width: 360px;
@@ -500,5 +506,52 @@ body{
 
     .form_button{
         font-size: 15px;
+    }
+
+    .form__input, .form_button{
+        height: 42px
+    }
+
+    .form.inline .form__input{
+        width: 100%;
+    }
+
+    .form.inline .form-element{
+        gap: 15px;
+    }
+
+    .form{
+        gap: 20px;
+    }
+
+    .form-follow{
+        width: 100%;
+        padding: 0 40px;
+    }
+
+    .form-follow .form__input, .form-follow .form_button{
+        width: 100%;
+        height: 48px;
+    }
+
+    .form-follow label{
+        font-size: 22px;
+        text-align: left;
+        padding-left: 7px;
+    }
+
+    .showCollection{
+        height: 50px;
+        margin-top: 10px;
+        border-radius: 12px;
+    }
+
+    .showCollection a{
+        font-size: 16px;
+        letter-spacing: 1;
+    }
+
+    .noise-wrapper{
+        padding: 20px 0 100px 0;
     }
 }
